--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <section class="advantages">
                 <div class="advantages-slider">
-                    <div class="slider-container" autoplay="1">
+                    <div class="slider-container">
                         <div class="slides" id="slides">
                             <div class="slide">
                                 <div class="buttons">
